Add post to app js

--- a/app.json
+++ b/app.json
@@ -24,10 +24,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.anovcherov.mytutorapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "bd99c20e-68e5-4558-abd5-01145c3c7060"
+      }
     }
   }
 }
